Avoid showing scrollbar in the settings window on macOS

--- a/app/stylesheets/application.css
+++ b/app/stylesheets/application.css
@@ -120,7 +120,7 @@ button:focus {
 }
 
 #main {
-  padding: 32px 20px 20px;
+  padding: 32px 20px 18px;
 }
 
 #main.windows {
